// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`snapshot test: metricCache 1`] = `
Object {
  "hits": Metric {
    "account": undefined,
    "color": "#2ca02c",
    "dimensions": Object {
      "ApiName": "DummyApiName",
      "Stage": "DummyStage",
    },
    "label": "Cache Hit",
    "metricName": "CacheHitCount",
    "namespace": "AWS/ApiGateway",
    "period": Duration {
      "amount": 1,
      "unit": TimeUnit {
        "inMillis": 60000,
        "isoLabel": "M",
        "label": "minutes",
      },
    },
    "region": undefined,
    "statistic": "Sum",
    "unit": undefined,
  },
  "misses": Metric {
    "account": undefined,
    "color": "#d62728",
    "dimensions": Object {
      "ApiName": "DummyApiName",
      "Stage": "DummyStage",
    },
    "label": "Cache Miss",
    "metricName": "CacheMissCount",
    "namespace": "AWS/ApiGateway",
    "period": Duration {
      "amount": 1,
      "unit": TimeUnit {
        "inMillis": 60000,
        "isoLabel": "M",
        "label": "minutes",
      },
    },
    "region": undefined,
    "statistic": "Sum",
    "unit": undefined,
  },
}
`;

exports[`snapshot test: metricCalls 1`] = `
Metric {
  "account": undefined,
  "color": "#1f77b4",
  "dimensions": Object {
    "ApiName": "DummyApiName",
    "Stage": "DummyStage",
  },
  "label": "Calls",
  "metricName": "Count",
  "namespace": "AWS/ApiGateway",
  "period": Duration {
    "amount": 1,
    "unit": TimeUnit {
      "inMillis": 60000,
      "isoLabel": "M",
      "label": "minutes",
    },
  },
  "region": undefined,
  "statistic": "Sum",
  "unit": undefined,
}
`;

exports[`snapshot test: metricErrors 1`] = `
Object {
  "count4XX": Metric {
    "account": undefined,
    "color": "#ff7f0e",
    "dimensions": Object {
      "ApiName": "DummyApiName",
      "Stage": "DummyStage",
    },
    "label": "4XX Errors",
    "metricName": "4XXError",
    "namespace": "AWS/ApiGateway",
    "period": Duration {
      "amount": 1,
      "unit": TimeUnit {
        "inMillis": 60000,
        "isoLabel": "M",
        "label": "minutes",
      },
    },
    "region": undefined,
    "statistic": "Sum",
    "unit": undefined,
  },
  "count5XX": Metric {
    "account": undefined,
    "color": "#d62728",
    "dimensions": Object {
      "ApiName": "DummyApiName",
      "Stage": "DummyStage",
    },
    "label": "5XX Errors",
    "metricName": "5XXError",
    "namespace": "AWS/ApiGateway",
    "period": Duration {
      "amount": 1,
      "unit": TimeUnit {
        "inMillis": 60000,
        "isoLabel": "M",
        "label": "minutes",
      },
    },
    "region": undefined,
    "statistic": "Sum",
    "unit": undefined,
  },
}
`;

exports[`snapshot test: metricIntegrationLatency 1`] = `
Object {
  "avg": Metric {
    "account": undefined,
    "color": undefined,
    "dimensions": Object {
      "ApiName": "DummyApiName",
      "Stage": "DummyStage",
    },
    "label": "avg",
    "metricName": "IntegrationLatency",
    "namespace": "AWS/ApiGateway",
    "period": Duration {
      "amount": 1,
      "unit": TimeUnit {
        "inMillis": 60000,
        "isoLabel": "M",
        "label": "minutes",
      },
    },
    "region": undefined,
    "statistic": "Average",
    "unit": undefined,
  },
  "max": Metric {
    "account": undefined,
    "color": undefined,
    "dimensions": Object {
      "ApiName": "DummyApiName",
      "Stage": "DummyStage",
    },
    "label": "max",
    "metricName": "IntegrationLatency",
    "namespace": "AWS/ApiGateway",
    "period": Duration {
      "amount": 1,
      "unit": TimeUnit {
        "inMillis": 60000,
        "isoLabel": "M",
        "label": "minutes",
      },
    },
    "region": undefined,
    "statistic": "Maximum",
    "unit": undefined,
  },
  "min": Metric {
    "account": undefined,
    "color": undefined,
    "dimensions": Object {
      "ApiName": "DummyApiName",
      "Stage": "DummyStage",
    },
    "label": "min",
    "metricName": "IntegrationLatency",
    "namespace": "AWS/ApiGateway",
    "period": Duration {
      "amount": 1,
      "unit": TimeUnit {
        "inMillis": 60000,
        "isoLabel": "M",
        "label": "minutes",
      },
    },
    "region": undefined,
    "statistic": "Minimum",
    "unit": undefined,
  },
  "p90": Metric {
    "account": undefined,
    "color": undefined,
    "dimensions": Object {
      "ApiName": "DummyApiName",
      "Stage": "DummyStage",
    },
    "label": "p90",
    "metricName": "IntegrationLatency",
    "namespace": "AWS/ApiGateway",
    "period": Duration {
      "amount": 1,
      "unit": TimeUnit {
        "inMillis": 60000,
        "isoLabel": "M",
        "label": "minutes",
      },
    },
    "region": undefined,
    "statistic": "p90",
    "unit": undefined,
  },
  "p95": Metric {
    "account": undefined,
    "color": undefined,
    "dimensions": Object {
      "ApiName": "DummyApiName",
      "Stage": "DummyStage",
    },
    "label": "p95",
    "metricName": "IntegrationLatency",
    "namespace": "AWS/ApiGateway",
    "period": Duration {
      "amount": 1,
      "unit": TimeUnit {
        "inMillis": 60000,
        "isoLabel": "M",
        "label": "minutes",
      },
    },
    "region": undefined,
    "statistic": "p95",
    "unit": undefined,
  },
  "p99": Metric {
    "account": undefined,
    "color": undefined,
    "dimensions": Object {
      "ApiName": "DummyApiName",
      "Stage": "DummyStage",
    },
    "label": "p99",
    "metricName": "IntegrationLatency",
    "namespace": "AWS/ApiGateway",
    "period": Duration {
      "amount": 1,
      "unit": TimeUnit {
        "inMillis": 60000,
        "isoLabel": "M",
        "label": "minutes",
      },
    },
    "region": undefined,
    "statistic": "p99",
    "unit": undefined,
  },
}
`;

exports[`snapshot test: metricLatency 1`] = `
Object {
  "avg": Metric {
    "account": undefined,
    "color": undefined,
    "dimensions": Object {
      "ApiName": "DummyApiName",
      "Stage": "DummyStage",
    },
    "label": "avg",
    "metricName": "Latency",
    "namespace": "AWS/ApiGateway",
    "period": Duration {
      "amount": 1,
      "unit": TimeUnit {
        "inMillis": 60000,
        "isoLabel": "M",
        "label": "minutes",
      },
    },
    "region": undefined,
    "statistic": "Average",
    "unit": undefined,
  },
  "max": Metric {
    "account": undefined,
    "color": undefined,
    "dimensions": Object {
      "ApiName": "DummyApiName",
      "Stage": "DummyStage",
    },
    "label": "max",
    "metricName": "Latency",
    "namespace": "AWS/ApiGateway",
    "period": Duration {
      "amount": 1,
      "unit": TimeUnit {
        "inMillis": 60000,
        "isoLabel": "M",
        "label": "minutes",
      },
    },
    "region": undefined,
    "statistic": "Maximum",
    "unit": undefined,
  },
  "min": Metric {
    "account": undefined,
    "color": undefined,
    "dimensions": Object {
      "ApiName": "DummyApiName",
      "Stage": "DummyStage",
    },
    "label": "min",
    "metricName": "Latency",
    "namespace": "AWS/ApiGateway",
    "period": Duration {
      "amount": 1,
      "unit": TimeUnit {
        "inMillis": 60000,
        "isoLabel": "M",
        "label": "minutes",
      },
    },
    "region": undefined,
    "statistic": "Minimum",
    "unit": undefined,
  },
  "p90": Metric {
    "account": undefined,
    "color": undefined,
    "dimensions": Object {
      "ApiName": "DummyApiName",
      "Stage": "DummyStage",
    },
    "label": "p90",
    "metricName": "Latency",
    "namespace": "AWS/ApiGateway",
    "period": Duration {
      "amount": 1,
      "unit": TimeUnit {
        "inMillis": 60000,
        "isoLabel": "M",
        "label": "minutes",
      },
    },
    "region": undefined,
    "statistic": "p90",
    "unit": undefined,
  },
  "p95": Metric {
    "account": undefined,
    "color": undefined,
    "dimensions": Object {
      "ApiName": "DummyApiName",
      "Stage": "DummyStage",
    },
    "label": "p95",
    "metricName": "Latency",
    "namespace": "AWS/ApiGateway",
    "period": Duration {
      "amount": 1,
      "unit": TimeUnit {
        "inMillis": 60000,
        "isoLabel": "M",
        "label": "minutes",
      },
    },
    "region": undefined,
    "statistic": "p95",
    "unit": undefined,
  },
  "p99": Metric {
    "account": undefined,
    "color": undefined,
    "dimensions": Object {
      "ApiName": "DummyApiName",
      "Stage": "DummyStage",
    },
    "label": "p99",
    "metricName": "Latency",
    "namespace": "AWS/ApiGateway",
    "period": Duration {
      "amount": 1,
      "unit": TimeUnit {
        "inMillis": 60000,
        "isoLabel": "M",
        "label": "minutes",
      },
    },
    "region": undefined,
    "statistic": "p99",
    "unit": undefined,
  },
}
`;
